change main buttons position

--- a/src/style.scss
+++ b/src/style.scss
@@ -27,7 +27,7 @@ body {
   position: relative;
   background-color: $primaryColor;
   max-width: 600px;
-  aspect-ratio: 0.6;
+  height: 90vh;
   margin: 0 auto;
   border-radius: 1.5rem;
 }
