change main buttons position v2

--- a/src/_buttonsContainer.scss
+++ b/src/_buttonsContainer.scss
@@ -1,7 +1,8 @@
 .controlButtons_container {
   padding: 1rem 0rem 1rem 4rem;
   line-height: 0px;
-  position: absolute;
+  margin-bottom: 15px;
+  // position: absolute;
   width: 220px;
   border-radius: 0 200px 200px 0;
   background-color: rgba(196, 196, 196, 0.451);
