--- a/src/_buttonsContainer.scss
+++ b/src/_buttonsContainer.scss
@@ -1,11 +1,11 @@
 .controlButtons_container {
-  padding: 1rem 0rem 1rem 4rem;
+  padding: 1rem 0rem 1rem 2rem;
   line-height: 0px;
   margin-bottom: 15px;
   // position: absolute;
-  width: 220px;
+  width: 200px;
   border-radius: 0 200px 200px 0;
-  background-color: rgba(196, 196, 196, 0.451);
+  background-color: rgba(233, 233, 233, 0.252);
 
   &-1 {
     bottom: 200px;
@@ -17,35 +17,83 @@
 }
 
 .controlButton_1 {
-  color: white;
-  border: none;
-  border-radius: 5px 30px 30px 5px;
-  box-shadow: 3px 3px 5px rgba(208, 152, 152, 0.703);
-  outline: none;
-  padding: 0.8em 2.3em 0.8em 1.5em;
-  font-size: large;
-  letter-spacing: 4px;
+  // color: white;
+  // border: none;
+  // border-radius: 5px 30px 30px 5px;
+  // box-shadow: 3px 3px 5px rgba(208, 152, 152, 0.703);
+  // outline: none;
+  // padding: 0.8em 2.3em 0.8em 1.5em;
+  // font-size: large;
+  // letter-spacing: 4px;
   width: 130px;
   text-transform: uppercase;
 
+  background-color: transparent;
+  background-image: linear-gradient(#fff, #f5f5fa);
+  border: none;
+  border-radius: 9999px;
+  box-shadow: rgba(37, 44, 97, 0.15) 0 4px 11px 0,
+    rgba(93, 100, 148, 0.2) 0 1px 3px 0;
+  box-sizing: border-box;
+  /* color: #484c7a; */
+  color: rgb(46, 180, 46);
+  cursor: pointer;
+  display: inline-block;
+  font-family: Hind, system-ui, BlinkMacSystemFont, -apple-system, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
+  font-weight: 400;
+  letter-spacing: 1px;
+  margin: 4px;
+  padding: 12px 24px;
+  text-align: center;
+  text-decoration: inherit;
+  text-wrap: nowrap;
+  transition: all 0.05s ease-out;
+  transition-behavior: normal;
+  white-space-collapse: collapse;
+  line-height: 1.15;
+
   &-green {
-    background-image: linear-gradient(
-      to bottom,
-      rgb(0, 255, 0),
-      rgb(87, 227, 52),
-      rgb(0, 255, 0)
-    );
+    color: rgb(46, 180, 46);
   }
   &-red {
-    background-image: linear-gradient(to bottom, red, rgb(227, 52, 52), red);
+    color: red;
   }
 }
 
+@media (min-width: 576px) {
+  .controlButton_1 {
+    padding-bottom: 10px;
+    padding-top: 10px;
+  }
+}
+
+.controlButton_1-green:hover {
+  color: green;
+}
 .controlButton_1-red:hover {
-  box-shadow: 2px 2px 5px rgb(184, 134, 134);
-  transform: translate(-1px, -0px);
+  color: rgb(203, 3, 3);
+}
+.controlButton_1-green:active {
+  box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0,
+    rgba(93, 100, 148, 0.2) 0 1px 1px 0;
+}
+.controlButton_1-red:active {
+  box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0,
+    rgba(93, 100, 148, 0.2) 0 1px 1px 0;
+}
+
+.controlButton_1:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+
+.controlButton_1-red:hover {
+  // box-shadow: 2px 2px 5px rgb(184, 134, 134);
+  // transform: translate(-1px, -0px);
 }
 .controlButton_1-green:hover {
-  box-shadow: 2px 2px 5px rgb(147, 184, 134);
-  transform: translate(-1px, -0px);
+  // box-shadow: 2px 2px 5px rgb(147, 184, 134);
+  // transform: translate(-1px, -0px);
 }
