--- a/src/style.scss
+++ b/src/style.scss
@@ -25,7 +25,7 @@ body {
 
 .calculator_container {
   position: relative;
-  background-color: $primaryColor;
+  background-color: white;
   max-width: 600px;
   height: 90vh;
   margin: 0 auto;
@@ -65,19 +65,40 @@ body {
 }
 
 .result_title {
-  font-size: small;
+  font-size: 10px;
+  text-transform: uppercase;
   color: rgba(36, 64, 123, 0.895);
   align-self: flex-end;
   padding-right: 5px;
+  letter-spacing: 0;
 }
 
 .result {
-  background-color: rgba(36, 64, 123, 0.895);
+  background-color: rgba(73, 103, 168, 0.895);
   border-radius: 30px 0 0 30px;
   color: white;
   font-size: 35px;
-  padding-left: 20px;
+  padding: 5px 0 5px 20px;
   width: 100%;
+
+  background-image: linear-gradient(
+    rgba(46, 82, 158, 0.536),
+    rgba(24, 42, 82, 0.895)
+  );
+  border: none;
+  box-shadow: rgba(37, 44, 97, 0.15) 0 4px 11px 0,
+    rgba(93, 100, 148, 0.2) 0 1px 3px 0;
+
+  font-family: Hind, system-ui, BlinkMacSystemFont, -apple-system, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
+  letter-spacing: 1px;
+  text-align: center;
+  text-decoration: inherit;
+  text-wrap: nowrap;
+  transition: all 0.05s ease-out;
+  transition-behavior: normal;
+  white-space-collapse: collapse;
 }
 
 .score_indicator {
