change buttons position and styling, removal of background padding

--- a/src/style.scss
+++ b/src/style.scss
@@ -17,10 +17,9 @@
 }
 
 body {
-  background-color: rgb(202, 202, 202);
+  background-color: white;
   font-size: 60px;
   margin: 0;
-  padding: 2rem;
 }
 
 .calculator_container {
@@ -139,3 +138,5 @@ body {
   display: flex;
   align-items: center;
 }
+
+// xxxxxxxx
