--- a/style.css
+++ b/style.css
@@ -44,6 +44,12 @@
   text-align: center;
 }
 
+.timeCounter {
+  width: 100%;
+  height: 10px;
+  background-image: linear-gradient(to right, rgb(22, 40, 159) 1%, transparent 1% 99%, rgb(22, 40, 159) 99%);
+}
+
 .controlButtons_container {
   padding: 1rem 1.7rem 1rem 2rem;
   line-height: 0px;
