--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,6 @@
 @import "variables";
 @import "generalClasses";
+@import "navigation";
 @import "title";
 @import "screen";
 @import "timeCounter";
@@ -18,6 +19,7 @@
 }
 
 body {
+  position: relative;
   background-color: white;
   font-size: 60px;
   margin: 0;
