--- a/src/_navigation.scss
+++ b/src/_navigation.scss
@@ -1,12 +1,12 @@
 .nav {
   position: absolute;
-  background-color: red;
+  background-color: rgb(8, 35, 125);
   top: 0;
-  left: 0vw;
-  width: 100vw;
+  left: 0;
+  width: 100%;
   height: 100vh;
   padding-top: 2rem;
-  transition: all 3s ease-in-out;
+  transition: all 0.3s ease-in;
 
   &_list {
     list-style: none;
@@ -15,11 +15,87 @@
   }
 
   &_listItem {
+    // text-align: center;
     &-1 {
+      // text-align: center;
     }
   }
 }
 
 .nav.closed {
-  left: 1000000vw;
+  top: -100vw;
+}
+
+.navButton {
+  display: inline-block;
+  width: 150px;
+  margin: 4px;
+  padding: 20px 44px;
+  background-color: transparent;
+  background-image: linear-gradient(#fff, #f5f5fa);
+  border: none;
+  border-radius: 9999px;
+  box-shadow: rgba(37, 44, 97, 0.15) 0 4px 11px 0,
+    rgba(74, 80, 118, 0.603) 0 1px 3px 0;
+
+  text-transform: uppercase;
+  color: rgb(46, 180, 46);
+  font-family: Hind, system-ui, BlinkMacSystemFont, -apple-system, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
+  font-weight: 600;
+  letter-spacing: 2px;
+  font-size: 16px;
+  text-align: center;
+  text-wrap: nowrap;
+  line-height: 1.15;
+
+  cursor: pointer;
+  transition: all 0.05s ease-out;
+
+  &-mode {
+    color: rgb(180, 46, 100);
+    text-align: center;
+    padding-left: 100px;
+    padding-right: 100px;
+    margin: 0;
+    width: unset;
+    &:hover {
+      color: green;
+    }
+
+    &:active {
+      box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0,
+        rgba(93, 100, 148, 0.2) 0 1px 1px 0;
+    }
+  }
+
+  &_difficulty {
+    &-decrease {
+      background-color: red;
+      color: gray;
+      border-radius: 99999px 0 0 99999px;
+    }
+    &-increase {
+      border-radius: 0 99999px 99999px 0;
+    }
+  }
+
+  &-red {
+    color: red;
+
+    &:hover {
+      color: rgb(203, 3, 3);
+    }
+
+    &:active {
+      box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0,
+        rgba(93, 100, 148, 0.2) 0 1px 1px 0;
+    }
+  }
+}
+
+.difficulty_scale {
+  background-color: white;
+  color: red;
 }
