--- a/src/_navigation.scss
+++ b/src/_navigation.scss
@@ -1,6 +1,10 @@
 .nav {
   position: absolute;
-  background-color: rgb(8, 35, 125);
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(55, 83, 173) 60%,
+    rgb(8, 35, 125)
+  );
   top: 0;
   left: 0;
   width: 100%;
@@ -9,6 +13,11 @@
   transition: all 0.1s ease-in;
 
   &_list {
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    gap: 3rem;
     list-style: none;
     padding: 0;
     margin: 0 auto;
@@ -16,8 +25,19 @@
 
   &_listItem {
     // text-align: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
     &-1 {
       // text-align: center;
+    }
+
+    &-difficulty {
+    }
+
+    &-back {
+      align-self: center;
     }
   }
 }
@@ -36,8 +56,8 @@
   background-image: linear-gradient(#fff, #f5f5fa);
   border: none;
   border-radius: 9999px;
-  box-shadow: rgba(37, 44, 97, 0.15) 0 4px 11px 0,
-    rgba(74, 80, 118, 0.603) 0 1px 3px 0;
+  box-shadow: rgb(105, 130, 156) 0 2px 3px 0,
+    rgba(137, 144, 186, 0.737) 0 1px 3px 0;
 
   text-transform: uppercase;
   color: rgb(46, 180, 46);
@@ -59,8 +79,8 @@
     text-align: center;
     padding-left: 100px;
     padding-right: 100px;
-    margin: 0;
-    width: unset;
+    margin-top: 3rem;
+    width: 100%;
     &:hover {
       color: green;
     }
@@ -71,14 +91,28 @@
     }
   }
 
+  &-back {
+    margin-top: 4rem;
+  }
+
   &_difficulty {
     &-decrease {
       background-color: red;
       color: gray;
+      width: 20%;
       border-radius: 99999px 0 0 99999px;
     }
     &-increase {
+      width: 20%;
       border-radius: 0 99999px 99999px 0;
+    }
+
+    &_scale {
+      background-color: white;
+      color: red;
+      margin: 4px;
+      flex-grow: 1;
+      text-align: center;
     }
   }
 
@@ -94,9 +128,4 @@
         rgba(93, 100, 148, 0.2) 0 1px 1px 0;
     }
   }
-}
-
-.difficulty_scale {
-  background-color: white;
-  color: red;
 }
