change of options styling

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,6 @@
 @import "variables";
 @import "generalClasses";
-@import "navigation";
+@import "options";
 @import "title";
 @import "screen";
 @import "timeCounter";
