--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
   display: none;
 }
 
-.nav {
+.options {
   position: absolute;
-  background-image: linear-gradient(to bottom right, rgb(55, 83, 173) 60%, rgb(8, 35, 125));
+  background: white;
   top: 0;
   left: 0;
   width: 100%;
@@ -12,7 +12,7 @@
   padding-top: 2rem;
   transition: all 0.1s ease-in;
 }
-.nav_list {
+.options_list {
   max-width: 400px;
   display: flex;
   flex-direction: column;
@@ -22,25 +22,54 @@
   padding: 0;
   margin: 0 auto;
 }
-.nav_listItem {
+.options_modeContainer {
+  margin-top: 3rem;
+  padding: 1rem 1.5rem 1rem;
+  line-height: 0px;
+  border-radius: 200px 200px;
+  background-color: rgba(8, 35, 125, 0.174);
+  display: flex;
+  align-items: center;
+}
+.options_modeText {
+  margin-left: auto;
+  margin-right: 1rem;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+}
+.options_gameOptionsContainer {
+  padding: 1.6rem 1.5rem;
+  line-height: 0px;
+  border-radius: 50px 50px;
+  border: 4px solid rgba(8, 35, 125, 0.174);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  gap: 2rem;
+}
+.options_backButtonContainer {
+  padding: 1rem 1.5rem 1rem;
+  line-height: 0px;
+  border-radius: 200px 200px;
+  background-color: rgba(8, 35, 125, 0.174);
+  display: flex;
+  justify-content: space-between;
+}
+.options_listItem {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-between;
 }
-.nav_listItem-back {
+.options_listItem-difficulty {
+  gap: 0rem;
+}
+.options_listItem-back {
   align-self: center;
 }
-
-.nav.closed {
-  top: -40000000px;
-  display: none;
-}
-
-.navButton {
+.options_button {
   display: inline-block;
-  width: 150px;
-  margin: 4px;
   padding: 20px 44px;
   background-color: transparent;
   background-image: linear-gradient(#fff, #f5f5fa);
@@ -48,7 +77,7 @@
   border-radius: 9999px;
   box-shadow: rgb(105, 130, 156) 0 2px 3px 0, rgba(137, 144, 186, 0.737) 0 1px 3px 0;
   text-transform: uppercase;
-  color: rgb(46, 180, 46);
+  color: rgb(24, 48, 124);
   font-family: Hind, system-ui, BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-weight: 600;
   letter-spacing: 2px;
@@ -59,47 +88,57 @@
   cursor: pointer;
   transition: all 0.05s ease-out;
 }
-.navButton-mode {
-  color: rgb(180, 46, 100);
-  text-align: center;
-  padding-left: 100px;
-  padding-right: 100px;
-  margin-top: 3rem;
-  width: 100%;
-}
-.navButton-mode:hover {
+.options_button:hover {
   color: green;
 }
-.navButton-mode:active {
+.options_button:active {
   box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0, rgba(93, 100, 148, 0.2) 0 1px 1px 0;
 }
-.navButton-back {
-  margin-top: 4rem;
+.options.closed {
+  top: -40000000px;
+  display: none;
 }
-.navButton_difficulty-decrease {
+
+.options_button-mode {
+  color: rgb(180, 46, 100);
+  text-align: center;
+}
+.options_button-mode:hover {
+  color: green;
+}
+.options_button-mode:active {
+  box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0, rgba(93, 100, 148, 0.2) 0 1px 1px 0;
+}
+.options_button-back {
+  color: rgb(46, 180, 46);
+}
+.options_button_difficulty {
+  position: relative;
+}
+.options_button_difficulty-decrease {
   background-color: red;
   color: gray;
   width: 20%;
   border-radius: 99999px 0 0 99999px;
+  box-shadow: rgb(105, 130, 156) 0 2px 3px 0, rgba(137, 144, 186, 0.737) 0 1px 3px 0;
 }
-.navButton_difficulty-increase {
+.options_button_difficulty-increase {
   width: 20%;
   border-radius: 0 99999px 99999px 0;
 }
-.navButton_difficulty_scale {
-  background-color: white;
-  color: red;
-  margin: 4px;
+.options_button_difficulty_scale {
   flex-grow: 1;
   text-align: center;
+  line-height: 44px;
+  box-shadow: rgb(105, 130, 156) 0 2px 3px 0, rgba(137, 144, 186, 0.737) 0 1px 3px 0;
 }
-.navButton-red {
+.options_button-red {
   color: red;
 }
-.navButton-red:hover {
+.options_button-red:hover {
   color: rgb(203, 3, 3);
 }
-.navButton-red:active {
+.options_button-red:active {
   box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0, rgba(93, 100, 148, 0.2) 0 1px 1px 0;
 }
 
