--- a/src/_options.scss
+++ b/src/_options.scss
@@ -153,12 +153,15 @@
     }
 
     &_scale {
-      // display: block;
+      display: flex;
+      color: rgb(180, 46, 100);
+      justify-content: center;
+      align-items: center;
       flex-grow: 1;
-      text-align: center;
       line-height: 44px;
       box-shadow: rgb(105, 130, 156) 0 2px 3px 0,
         rgba(137, 144, 186, 0.737) 0 1px 3px 0;
+      font-size: 1.5rem;
     }
   }
 
