--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,7 @@
 @import "variables";
 @import "generalClasses";
+@import "score";
+@import "results";
 @import "options";
 @import "title";
 @import "screen";
@@ -20,7 +22,7 @@
 
 body {
   position: relative;
-  background-color: white;
+  background-color: $backgroundColor;
   font-size: 60px;
   margin: 0;
   padding: 0;
@@ -28,119 +30,9 @@ body {
 
 .calculator_container {
   position: relative;
-  background-color: white;
+  background-color: $backgroundColor;
   // max-width: 600px;
   height: 90vh;
   margin: 0 auto;
   border-radius: 1.5rem;
 }
-
-.score_result_container {
-  margin-top: 1rem;
-  padding: 10px 0px 10px 30px;
-  border-radius: 50px 0 0 50px;
-  font-size: 1.4rem;
-  letter-spacing: 2px;
-  text-align: center;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.score_container {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-.score_title {
-  font-size: small;
-}
-.score {
-  color: $tertiaryColor;
-}
-
-.result_container {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  width: 40%;
-}
-
-.result_title {
-  font-size: 10px;
-  text-transform: uppercase;
-  color: rgba(36, 64, 123, 0.895);
-  align-self: flex-end;
-  padding-right: 5px;
-  letter-spacing: 0;
-}
-
-.result {
-  background-color: rgba(73, 103, 168, 0.895);
-  border-radius: 30px 0 0 30px;
-  color: white;
-  font-size: 35px;
-  padding: 5px 0 5px 20px;
-  width: 100%;
-
-  background-image: linear-gradient(
-    rgba(46, 82, 158, 0.536),
-    rgba(24, 42, 82, 0.895)
-  );
-  border: none;
-  box-shadow: rgba(37, 44, 97, 0.15) 0 4px 11px 0,
-    rgba(93, 100, 148, 0.2) 0 1px 3px 0;
-
-  font-family: Hind, system-ui, BlinkMacSystemFont, -apple-system, "Segoe UI",
-    Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans",
-    "Helvetica Neue", sans-serif;
-  letter-spacing: 1px;
-  text-align: center;
-  text-decoration: inherit;
-  text-wrap: nowrap;
-  transition: all 0.05s ease-out;
-  transition-behavior: normal;
-  white-space-collapse: collapse;
-}
-
-.score_indicator {
-  border-radius: 10px;
-  background-color: rgb(36 64 123);
-  width: 100%;
-  height: 50px;
-  text-align: center;
-  position: absolute;
-  bottom: 0;
-  left: 0rem;
-
-  &-points {
-    display: block;
-    padding-top: 0.5rem;
-    font-size: 1rem;
-    font-weight: bold;
-    color: $primaryColor;
-  }
-}
-
-.option_button_container {
-  margin-top: 1.5rem;
-  width: 17%;
-  aspect-ratio: 1;
-  border-radius: 300px;
-  box-shadow: inset 3px 3px 5px #161b1d3f;
-}
-
-.option_button {
-  width: 80%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50% -50%);
-  aspect-ratio: 1;
-  border-radius: 300px;
-  box-shadow: -2px -2px 5px #fafbfac7;
-  display: flex;
-  align-items: center;
-}
-
-// xxxxxxxx
