--- a/style.css
+++ b/style.css
@@ -2,6 +2,64 @@
   display: none;
 }
 
+.score {
+  color: hsl(220, 100%, 25%);
+}
+.score_title {
+  font-size: small;
+}
+.score_container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.score_result_container {
+  margin-top: 1rem;
+  padding: 10px 0px 10px 30px;
+  border-radius: 50px 0 0 50px;
+  font-size: 1.4rem;
+  letter-spacing: 2px;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.result_container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 40%;
+}
+
+.result_title {
+  font-size: 10px;
+  text-transform: uppercase;
+  color: hsl(220, 100%, 25%);
+  align-self: flex-end;
+  padding-right: 5px;
+  letter-spacing: 0;
+}
+
+.result {
+  border-radius: 30px 0 0 30px;
+  color: white;
+  font-size: 35px;
+  padding: 5px 0 5px 20px;
+  width: 100%;
+  background-image: linear-gradient(rgb(46, 82, 158), rgb(24, 42, 82));
+  border: none;
+  box-shadow: rgba(37, 44, 97, 0.15) 0 4px 11px 0, rgba(93, 100, 148, 0.2) 0 1px 3px 0;
+  font-family: Hind, system-ui, BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  letter-spacing: 1px;
+  text-align: center;
+  text-decoration: inherit;
+  text-wrap: nowrap;
+  transition: all 0.05s ease-out;
+  transition-behavior: normal;
+  white-space-collapse: collapse;
+}
+
 .options {
   position: absolute;
   background: white;
@@ -88,7 +146,7 @@
   transition: all 0.05s ease-out;
 }
 .options_button:hover {
-  color: green;
+  color: red;
 }
 .options_button:active {
   box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0, rgba(93, 100, 148, 0.2) 0 1px 1px 0;
@@ -99,7 +157,7 @@
 }
 
 .options_button-mode {
-  color: rgb(180, 46, 100);
+  color: hsl(100, 100%, 30%);
   text-align: center;
 }
 .options_button-mode:hover {
@@ -109,7 +167,11 @@
   box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0, rgba(93, 100, 148, 0.2) 0 1px 1px 0;
 }
 .options_button-back {
-  color: rgb(46, 180, 46);
+  background-image: linear-gradient(hsl(220, 100%, 25%), hsl(220, 100%, 30%));
+  color: white;
+}
+.options_button-back:hover {
+  color: white;
 }
 .options_button_difficulty {
   position: relative;
@@ -257,7 +319,7 @@
 
 * {
   box-sizing: border-box;
-  color: rgb(24, 48, 124);
+  color: hsl(220, 100%, 25%);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   margin: 0;
 }
@@ -276,106 +338,6 @@ body {
   height: 90vh;
   margin: 0 auto;
   border-radius: 1.5rem;
-}
-
-.score_result_container {
-  margin-top: 1rem;
-  padding: 10px 0px 10px 30px;
-  border-radius: 50px 0 0 50px;
-  font-size: 1.4rem;
-  letter-spacing: 2px;
-  text-align: center;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.score_container {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-.score_title {
-  font-size: small;
-}
-
-.score {
-  color: rgb(36, 64, 123);
-}
-
-.result_container {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  width: 40%;
-}
-
-.result_title {
-  font-size: 10px;
-  text-transform: uppercase;
-  color: rgba(36, 64, 123, 0.895);
-  align-self: flex-end;
-  padding-right: 5px;
-  letter-spacing: 0;
-}
-
-.result {
-  background-color: rgba(73, 103, 168, 0.895);
-  border-radius: 30px 0 0 30px;
-  color: white;
-  font-size: 35px;
-  padding: 5px 0 5px 20px;
-  width: 100%;
-  background-image: linear-gradient(rgba(46, 82, 158, 0.536), rgba(24, 42, 82, 0.895));
-  border: none;
-  box-shadow: rgba(37, 44, 97, 0.15) 0 4px 11px 0, rgba(93, 100, 148, 0.2) 0 1px 3px 0;
-  font-family: Hind, system-ui, BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  letter-spacing: 1px;
-  text-align: center;
-  text-decoration: inherit;
-  text-wrap: nowrap;
-  transition: all 0.05s ease-out;
-  transition-behavior: normal;
-  white-space-collapse: collapse;
-}
-
-.score_indicator {
-  border-radius: 10px;
-  background-color: rgb(36, 64, 123);
-  width: 100%;
-  height: 50px;
-  text-align: center;
-  position: absolute;
-  bottom: 0;
-  left: 0rem;
-}
-.score_indicator-points {
-  display: block;
-  padding-top: 0.5rem;
-  font-size: 1rem;
-  font-weight: bold;
-  color: rgb(236, 236, 236);
-}
-
-.option_button_container {
-  margin-top: 1.5rem;
-  width: 17%;
-  aspect-ratio: 1;
-  border-radius: 300px;
-  box-shadow: inset 3px 3px 5px rgba(22, 27, 29, 0.2470588235);
-}
-
-.option_button {
-  width: 80%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50% -50%);
-  aspect-ratio: 1;
-  border-radius: 300px;
-  box-shadow: -2px -2px 5px rgba(250, 251, 250, 0.7803921569);
-  display: flex;
-  align-items: center;
 }
 
 /*# sourceMappingURL=style.css.map */
