introduce active state of operation type buttons

--- a/src/_options.scss
+++ b/src/_options.scss
@@ -49,7 +49,6 @@
   }
 
   &_backButtonContainer {
-    // margin-top: 3rem;
     padding: 1rem 1.5rem 1rem;
     line-height: 0px;
     border-radius: 200px 200px;
@@ -105,82 +104,73 @@
       box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0,
         rgba(93, 100, 148, 0.2) 0 1px 1px 0;
     }
+
+    &-mode {
+      color: darken($tertiaryColor, 5%);
+      text-align: center;
+
+      &:hover {
+        color: green;
+      }
+
+      &:active {
+        box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0,
+          rgba(93, 100, 148, 0.2) 0 1px 1px 0;
+      }
+    }
+
+    &-back {
+      background-image: linear-gradient(
+        $primaryColor,
+        color.adjust($primaryColor, $lightness: 5%)
+      );
+      color: $backgroundColor;
+
+      &:hover {
+        color: $backgroundColor;
+      }
+    }
+    &_difficulty {
+      position: relative;
+      &-decrease {
+        background-color: red;
+        color: gray;
+        width: 20%;
+        border-radius: 99999px 0 0 99999px;
+        box-shadow: rgb(105, 130, 156) 0 2px 3px 0,
+          rgba(137, 144, 186, 0.737) 0 1px 3px 0;
+      }
+      &-increase {
+        width: 20%;
+        border-radius: 0 99999px 99999px 0;
+      }
+
+      &_scale {
+        display: flex;
+        color: rgb(180, 46, 100);
+        justify-content: center;
+        align-items: center;
+        flex-grow: 1;
+        line-height: 44px;
+        box-shadow: rgb(105, 130, 156) 0 2px 3px 0,
+          rgba(137, 144, 186, 0.737) 0 1px 3px 0;
+        font-size: 1.5rem;
+      }
+    }
+
+    &.active {
+      //////---------------------------------
+      ///
+      box-shadow: rgba(37, 44, 97, 0.15) 0 0px 2px 0,
+        rgba(93, 100, 148, 0.5) 0 1px 2px 0;
+      &:hover {
+        color: rgb(203, 3, 3);
+      }
+    }
   }
 
   &.closed {
     top: -40000000px;
     display: none;
-  }
-}
-
-.options_button {
-  &-mode {
-    color: darken($tertiaryColor, 5%);
-    text-align: center;
-    // padding-left: 100px;
-    // padding-right: 100px;
-    // margin-top: 3rem;
-    // width: 10%;
-    &:hover {
-      color: green;
-    }
-
-    &:active {
-      box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0,
-        rgba(93, 100, 148, 0.2) 0 1px 1px 0;
-    }
-  }
-
-  &-back {
-    background-image: linear-gradient(
-      $primaryColor,
-      color.adjust($primaryColor, $lightness: 5%)
-    );
-    color: $backgroundColor;
-
-    &:hover {
-      color: $backgroundColor;
-    }
-  }
-
-  &_difficulty {
-    position: relative;
-    &-decrease {
-      background-color: red;
-      color: gray;
-      width: 20%;
-      border-radius: 99999px 0 0 99999px;
-      box-shadow: rgb(105, 130, 156) 0 2px 3px 0,
-        rgba(137, 144, 186, 0.737) 0 1px 3px 0;
-    }
-    &-increase {
-      width: 20%;
-      border-radius: 0 99999px 99999px 0;
-    }
-
-    &_scale {
-      display: flex;
-      color: rgb(180, 46, 100);
-      justify-content: center;
-      align-items: center;
-      flex-grow: 1;
-      line-height: 44px;
-      box-shadow: rgb(105, 130, 156) 0 2px 3px 0,
-        rgba(137, 144, 186, 0.737) 0 1px 3px 0;
-      font-size: 1.5rem;
-    }
-  }
-
-  &-red {
-    color: red;
-
-    &:hover {
-      color: rgb(203, 3, 3);
-    }
-
-    &:active {
-      box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0,
-        rgba(93, 100, 148, 0.2) 0 1px 1px 0;
-    }
   }
 }
