--- a/style.css
+++ b/style.css
@@ -145,21 +145,47 @@
   cursor: pointer;
   transition: all 0.05s ease-out;
 }
-.options_button:hover {
-  color: red;
-}
 .options_button:active {
   box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0, rgba(93, 100, 148, 0.2) 0 1px 1px 0;
 }
 .options_button-mode {
-  color: hsl(100, 100%, 30%);
   text-align: center;
 }
 .options_button-mode:hover {
-  color: green;
+  box-shadow: rgba(105, 130, 156, 0.782) 0 2px 3px 1px, rgba(137, 144, 186, 0.365) 0 1px 3px 1px;
 }
 .options_button-mode:active {
   box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0, rgba(93, 100, 148, 0.2) 0 1px 1px 0;
+}
+.options_button_difficulty {
+  position: relative;
+  display: flex;
+  font-size: 1.5rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+.options_button_difficulty-decrease {
+  border-radius: 99999px 0 0 99999px;
+}
+.options_button_difficulty-increase {
+  border-radius: 0 99999px 99999px 0;
+}
+.options_button_difficulty_scale {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  box-shadow: rgb(105, 130, 156) 0 2px 3px 0, rgba(137, 144, 186, 0.737) 0 1px 3px 0;
+  font-size: 1.8rem;
+  padding: 0 1rem;
+}
+.options_button-operationToggler {
+  font-size: 1.5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+.options_button-operationToggler:hover {
+  box-shadow: rgba(105, 130, 156, 0.782) 0 2px 3px 1px, rgba(137, 144, 186, 0.365) 0 1px 3px 1px;
 }
 .options_button-back {
   background-image: linear-gradient(hsl(220, 100%, 25%), hsl(220, 100%, 30%));
@@ -168,35 +194,8 @@
 .options_button-back:hover {
   color: white;
 }
-.options_button_difficulty {
-  position: relative;
-}
-.options_button_difficulty-decrease {
-  background-color: red;
-  color: gray;
-  width: 20%;
-  border-radius: 99999px 0 0 99999px;
-  box-shadow: rgb(105, 130, 156) 0 2px 3px 0, rgba(137, 144, 186, 0.737) 0 1px 3px 0;
-}
-.options_button_difficulty-increase {
-  width: 20%;
-  border-radius: 0 99999px 99999px 0;
-}
-.options_button_difficulty_scale {
-  display: flex;
-  color: rgb(180, 46, 100);
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-  line-height: 44px;
-  box-shadow: rgb(105, 130, 156) 0 2px 3px 0, rgba(137, 144, 186, 0.737) 0 1px 3px 0;
-  font-size: 1.5rem;
-}
 .options_button.active {
   box-shadow: rgba(37, 44, 97, 0.15) 0 0px 2px 0, rgba(93, 100, 148, 0.5) 0 1px 2px 0;
-}
-.options_button.active:hover {
-  color: rgb(203, 3, 3);
 }
 .options.closed {
   top: -40000000px;
