--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
+.root {
+  margin: 0;
+  padding: 0;
+}
+
+* {
+  box-sizing: border-box;
+  color: hsl(220, 100%, 25%);
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  margin: 0;
+}
+
+body {
+  position: relative;
+  background-color: white;
+  font-size: 60px;
+  margin: 0;
+  padding: 0;
+}
+
 .invisible {
   display: none;
 }
@@ -307,24 +327,42 @@
   box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0, rgba(93, 100, 148, 0.2) 0 1px 1px 0;
 }
 
-.root {
-  margin: 0;
-  padding: 0;
-}
-
-* {
-  box-sizing: border-box;
-  color: hsl(220, 100%, 25%);
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  margin: 0;
-}
-
-body {
-  position: relative;
+table {
+  height: 90vh;
+  margin: 2rem auto;
   background-color: white;
-  font-size: 60px;
-  margin: 0;
-  padding: 0;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 4;
+  border-collapse: collapse;
+  font-size: 1rem;
+}
+
+thead {
+  background-color: hsl(220, 100%, 25%);
+}
+
+th {
+  padding: 1rem 2rem;
+  color: white;
+  /* border: 1px solid black; */
+}
+
+td {
+  padding: 0.5rem 2rem;
+  text-align: center;
+  /* border: 1px solid black; */
+}
+
+tr > td:nth-child(3n):hover > .fa {
+  color: red;
+}
+
+tr:nth-child(2n) {
+  background-color: rgba(8, 35, 125, 0.174);
 }
 
 .calculator_container {
