--- a/src/_table.scss
+++ b/src/_table.scss
@@ -1,4 +1,5 @@
 .statistics_container {
+  padding-top: 1rem;
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -22,7 +23,7 @@
 
 table {
   height: 10rem;
-  margin: 2rem auto;
+  margin: 0.5rem auto;
   background-color: white;
   border-collapse: collapse;
   font-size: 1rem;
@@ -58,7 +59,7 @@ tr:nth-child(2n) {
 
 .statistics_backButtonContainer {
   position: absolute;
-  bottom: 5rem;
+  bottom: 7rem;
   padding: 1rem 1.5rem 1rem;
   line-height: 0px;
   border-radius: 200px 200px;
@@ -68,3 +69,109 @@ tr:nth-child(2n) {
   gap: 1rem;
   z-index: 5;
 }
+
+.table {
+  &_modeContainer {
+    margin-top: 1rem;
+
+    padding: 0.1rem 0.3rem;
+    line-height: 0px;
+    border-radius: 200px 200px;
+    // background-color: rgba(8, 35, 125, 0.174);
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 0.5rem;
+  }
+
+  &_button {
+    display: inline-block;
+    padding: 10px 24px;
+    background-color: transparent;
+    background-image: linear-gradient(#fff, #f5f5fa);
+    border: none;
+    border-radius: 9999px;
+    box-shadow: rgb(105, 130, 156) 0 2px 3px 0,
+      rgba(137, 144, 186, 0.737) 0 1px 3px 0;
+    text-transform: uppercase;
+    color: rgb(24, 48, 124);
+    font-family: Hind, system-ui, BlinkMacSystemFont, -apple-system, "Segoe UI",
+      Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans",
+      "Helvetica Neue", sans-serif;
+    font-weight: 600;
+    letter-spacing: 2px;
+    font-size: 16px;
+    text-align: center;
+    text-wrap: nowrap;
+    line-height: 1.15;
+    cursor: pointer;
+    transition: all 0.05s ease-out;
+
+    &:hover {
+      // color: red;
+    }
+
+    &:active {
+      box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0,
+        rgba(93, 100, 148, 0.2) 0 1px 1px 0;
+    }
+
+    &-mode {
+      // color: darken($tertiaryColor, 5%);
+      text-align: center;
+
+      &:hover {
+        box-shadow: rgba(105, 130, 156, 0.782) 0 2px 3px 1px,
+          rgba(137, 144, 186, 0.365) 0 1px 3px 1px;
+      }
+
+      &:active {
+        box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0,
+          rgba(93, 100, 148, 0.2) 0 1px 1px 0;
+      }
+    }
+  }
+}
+
+// &_modeText {
+//   margin-left: auto;
+//   font-size: 1.2rem;
+//   text-transform: uppercase;
+//   letter-spacing: 1px;
+// }
+
+// &_gameOptionsContainer {
+//   padding: 1.6rem 1.5rem;
+//   line-height: 0px;
+//   border-radius: 50px 50px;
+//   border: 4px solid rgba(8, 35, 125, 0.174);
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: space-around;
+//   gap: 2rem;
+// }
+
+// &_backButtonContainer {
+//   padding: 1rem 1.5rem 1rem;
+//   line-height: 0px;
+//   border-radius: 200px 200px;
+//   background-color: rgba(8, 35, 125, 0.174);
+//   display: flex;
+//   justify-content: space-between;
+// }
+
+// &_listItem {
+//   // text-align: center;
+//   display: flex;
+//   flex-direction: row;
+//   flex-wrap: nowrap;
+//   justify-content: space-between;
+
+//   &-difficulty {
+//     gap: 0rem;
+//   }
+
+//   &-back {
+//     align-self: center;
+//   }
+// }
