--- a/style.css
+++ b/style.css
@@ -431,6 +431,12 @@ tr:nth-child(2n) {
 .table_button-mode {
   text-align: center;
 }
+.table_button-mode.active {
+  box-shadow: rgba(37, 44, 97, 0.15) 0 0px 2px 0, rgba(93, 100, 148, 0.5) 0 1px 2px 0;
+}
+.table_button-mode.active:hover {
+  box-shadow: rgba(37, 44, 97, 0.15) 0 0px 2px 0, rgba(93, 100, 148, 0.5) 0 1px 2px 0;
+}
 .table_button-mode:hover {
   box-shadow: rgba(105, 130, 156, 0.782) 0 2px 3px 1px, rgba(137, 144, 186, 0.365) 0 1px 3px 1px;
 }
