--- a/src/_score.scss
+++ b/src/_score.scss
@@ -1,14 +1,14 @@
 .score {
-  color: $primaryColor;
+  color: $color-primary;
 
   &_title {
     font-size: small;
   }
 
   &_container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    @include flex-column() {
+      align-items: flex-start;
+    }
   }
 
   &_result_container {
