--- a/src/_generalClasses.scss
+++ b/src/_generalClasses.scss
@@ -5,14 +5,14 @@
 
 * {
   box-sizing: border-box;
-  color: $fontMainColor;
+  color: $color-primary;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   margin: 0;
 }
 
 body {
   position: relative;
-  background-color: $backgroundColor;
+  background-color: $color-background-primary;
   font-size: 60px;
   margin: 0;
   padding: 0;
