--- a/src/_results.scss
+++ b/src/_results.scss
@@ -1,14 +1,14 @@
 .result_container {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  width: 40%;
+  @include flex-column() {
+    align-items: flex-start;
+    width: 40%;
+  }
 }
 
 .result_title {
   font-size: 10px;
   text-transform: uppercase;
-  color: $fontMainColor;
+  color: $color-primary;
   align-self: flex-end;
   padding-right: 5px;
   letter-spacing: 0;
@@ -16,7 +16,7 @@
 
 .result {
   border-radius: 30px 0 0 30px;
-  color: $backgroundColor;
+  color: $color-background-primary;
   font-size: 35px;
   padding: 5px 0 5px 20px;
   width: 100%;
