--- a/src/_table.scss
+++ b/src/_table.scss
@@ -2,9 +2,10 @@
   padding-top: 1rem;
   width: 100vw;
   height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include flex-column() {
+    align-items: center;
+  }
+
   overflow: hidden;
   position: absolute;
   top: 0;
@@ -12,38 +13,48 @@
   left: 0;
   right: 0;
   z-index: 4;
-  background-color: white;
+  background-color: $color-background-primary;
 }
 
 .table_container {
-  height: 65vh;
-  overflow: scroll;
+  overflow: hidden;
 }
 
 table {
-  height: 10rem;
+  display: block;
+  height: 15.3rem;
   margin: 0.5rem auto;
-  background-color: white;
+  background-color: $color-background-primary;
   border-collapse: collapse;
   font-size: 1rem;
   margin-bottom: 8rem;
 }
 
 tbody {
+  width: 100%;
+  display: block;
+  height: 40.1vh;
+  overflow-y: scroll;
 }
 
 thead {
-  background-color: $primaryColor;
+  background-color: $color-primary;
 }
 
 th {
   padding: 1rem 2rem;
-  color: white;
+  color: $color-background-primary;
 }
 
 td {
+  display: inline-block;
+  width: 33%;
   padding: 0.5rem 2rem;
   text-align: center;
+}
+tr {
+  display: block;
+  width: 100%;
 }
 
 tr > td:nth-child(3n):hover > .fa {
@@ -51,7 +62,7 @@ tr > td:nth-child(3n):hover > .fa {
 }
 
 tr:nth-child(2n) {
-  background-color: rgba(8, 35, 125, 0.174);
+  background-color: $color-background-secondary;
 }
 
 .statistics_backButtonContainer {
@@ -60,7 +71,7 @@ tr:nth-child(2n) {
   padding: 1rem 1.5rem 1rem;
   line-height: 0px;
   border-radius: 200px 200px;
-  background-color: rgba(8, 35, 125, 0.174);
+  background-color: $color-background-secondary;
   display: flex;
   justify-content: space-between;
   gap: 1rem;
@@ -70,7 +81,6 @@ tr:nth-child(2n) {
 .table {
   &_modeContainer {
     margin-top: 1rem;
-
     padding: 0.1rem 0.3rem;
     line-height: 0px;
     border-radius: 200px 200px;
@@ -106,31 +116,22 @@ tr:nth-child(2n) {
     &:hover {
     }
 
-    &:active {
-      box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0,
-        rgba(93, 100, 148, 0.2) 0 1px 1px 0;
+    // &:active {
+    //   @include shadow();
+    // }
+
+    &:hover {
+      @include shadow-hover();
     }
 
     &-mode {
       text-align: center;
 
       &.active {
-        box-shadow: rgba(37, 44, 97, 0.15) 0 0px 2px 0,
-          rgba(93, 100, 148, 0.5) 0 1px 2px 0;
+        @include shadow-pressed();
         &:hover {
-          box-shadow: rgba(37, 44, 97, 0.15) 0 0px 2px 0,
-            rgba(93, 100, 148, 0.5) 0 1px 2px 0;
+          @include shadow-pressed();
         }
-      }
-
-      &:hover {
-        box-shadow: rgba(105, 130, 156, 0.782) 0 2px 3px 1px,
-          rgba(137, 144, 186, 0.365) 0 1px 3px 1px;
-      }
-
-      &:active {
-        box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0,
-          rgba(93, 100, 148, 0.2) 0 1px 1px 0;
       }
     }
   }
