--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -2,11 +2,36 @@
 
 //COLORS
 
-$backgroundColor: white;
-$primaryColor: hsl(220, 100%, 25%);
-$secondaryColor: color.adjust($primaryColor, $hue: 120deg, $lightness: 10%);
-$tertiaryColor: color.adjust($secondaryColor, $hue: 120deg);
+$color-primary: hsl(220, 100%, 25%);
+$color-secondary: color.adjust($color-primary, $hue: 120deg, $lightness: 10%);
+$tertiaryColor: color.adjust($color-secondary, $hue: 120deg);
 
-//FONT COLORS
+$color-background-primary: white;
+$color-background-secondary: rgba(8, 35, 125, 0.174);
 
-$fontMainColor: $primaryColor;
+//MIXINS
+
+//shadows
+
+@mixin shadow() {
+  box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0,
+    rgba(93, 100, 148, 0.2) 0 1px 1px 0;
+}
+
+@mixin shadow-hover() {
+  box-shadow: rgba(105, 130, 156, 0.782) 0 2px 3px 1px,
+    rgba(137, 144, 186, 0.365) 0 1px 3px 1px;
+}
+
+@mixin shadow-pressed() {
+  box-shadow: rgba(37, 44, 97, 0.15) 0 0px 2px 0,
+    rgba(93, 100, 148, 0.5) 0 1px 2px 0;
+}
+
+//flex
+
+@mixin flex-column() {
+  display: flex;
+  flex-direction: column;
+  @content;
+}
