--- a/src/style.scss
+++ b/src/style.scss
@@ -11,7 +11,7 @@
 
 .calculator_container {
   position: relative;
-  background-color: $backgroundColor;
+  background-color: $color-background-primary;
   // max-width: 600px;
   height: 90vh;
   margin: 0 auto;
