--- a/style.css
+++ b/style.css
@@ -163,10 +163,10 @@ body {
   text-wrap: nowrap;
   line-height: 1.15;
   cursor: pointer;
-  transition: all 0.05s ease-out;
+  transition: all 0.2s ease-out;
 }
 .options_button:active {
-  box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0, rgba(93, 100, 148, 0.2) 0 1px 1px 0;
+  box-shadow: rgba(37, 44, 97, 0.15) 0 0px 2px 0, rgba(93, 100, 148, 0.5) 0 1px 2px 0;
 }
 .options_button-mode {
   text-align: center;
@@ -175,7 +175,7 @@ body {
   box-shadow: rgba(105, 130, 156, 0.782) 0 2px 3px 1px, rgba(137, 144, 186, 0.365) 0 1px 3px 1px;
 }
 .options_button-mode:active {
-  box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0, rgba(93, 100, 148, 0.2) 0 1px 1px 0;
+  box-shadow: rgba(37, 44, 97, 0.15) 0 0px 2px 0, rgba(93, 100, 148, 0.5) 0 1px 2px 0;
 }
 .options_button_difficulty {
   position: relative;
@@ -213,8 +213,12 @@ body {
 }
 .options_button-back:hover {
   color: white;
+  box-shadow: rgba(105, 130, 156, 0.782) 0 2px 3px 1px, rgba(137, 144, 186, 0.365) 0 1px 3px 1px;
 }
-.options_button.active {
+.options_button-statistics:hover {
+  box-shadow: rgba(105, 130, 156, 0.782) 0 2px 3px 1px, rgba(137, 144, 186, 0.365) 0 1px 3px 1px;
+}
+.options_button.pressed {
   box-shadow: rgba(37, 44, 97, 0.15) 0 0px 2px 0, rgba(93, 100, 148, 0.5) 0 1px 2px 0;
 }
 .options.closed {
@@ -297,7 +301,6 @@ body {
   border-radius: 9999px;
   box-shadow: rgba(37, 44, 97, 0.15) 0 4px 11px 0, rgba(74, 80, 118, 0.603) 0 1px 3px 0;
   text-transform: uppercase;
-  font-family: Hind, system-ui, BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-weight: 600;
   letter-spacing: 2px;
   font-size: 16px;
@@ -351,17 +354,24 @@ body {
 }
 
 .table_container {
-  height: 65vh;
-  overflow: scroll;
+  overflow: hidden;
 }
 
 table {
-  height: 10rem;
+  display: block;
+  height: 15.3rem;
   margin: 0.5rem auto;
   background-color: white;
   border-collapse: collapse;
   font-size: 1rem;
   margin-bottom: 8rem;
+}
+
+tbody {
+  width: 100%;
+  display: block;
+  height: 40.1vh;
+  overflow-y: scroll;
 }
 
 thead {
@@ -374,8 +384,15 @@ th {
 }
 
 td {
+  display: inline-block;
+  width: 33%;
   padding: 0.5rem 2rem;
   text-align: center;
+}
+
+tr {
+  display: block;
+  width: 100%;
 }
 
 tr > td:nth-child(3n):hover > .fa {
@@ -429,8 +446,8 @@ tr:nth-child(2n) {
   cursor: pointer;
   transition: all 0.05s ease-out;
 }
-.table_button:active {
-  box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0, rgba(93, 100, 148, 0.2) 0 1px 1px 0;
+.table_button:hover {
+  box-shadow: rgba(105, 130, 156, 0.782) 0 2px 3px 1px, rgba(137, 144, 186, 0.365) 0 1px 3px 1px;
 }
 .table_button-mode {
   text-align: center;
@@ -440,12 +457,6 @@ tr:nth-child(2n) {
 }
 .table_button-mode.active:hover {
   box-shadow: rgba(37, 44, 97, 0.15) 0 0px 2px 0, rgba(93, 100, 148, 0.5) 0 1px 2px 0;
-}
-.table_button-mode:hover {
-  box-shadow: rgba(105, 130, 156, 0.782) 0 2px 3px 1px, rgba(137, 144, 186, 0.365) 0 1px 3px 1px;
-}
-.table_button-mode:active {
-  box-shadow: rgba(37, 44, 97, 0.15) 0 4px 3px 0, rgba(93, 100, 148, 0.2) 0 1px 1px 0;
 }
 
 .calculator_container {
