--- a/src/_generalClasses.scss
+++ b/src/_generalClasses.scss
@@ -1,6 +1,5 @@
-.root {
-  margin: 0;
-  padding: 0;
+html {
+  font-size: 15px;
 }
 
 * {
@@ -8,14 +7,21 @@
   color: $color-primary;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   margin: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   position: relative;
   background-color: $color-background-primary;
-  font-size: 60px;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
+  @media screen and (min-width: 450px) {
+    background-color: $color-background-secondary;
+    padding-top: 0.5rem;
+    // padding-left: 1rem;
+    // padding-right: 1rem;
+  }
 }
 
 .invisible {
