--- a/src/_screen.scss
+++ b/src/_screen.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
-  font-size: 2em;
+  font-size: 7rem;
   font-weight: 300;
 
   &_number {
