--- a/src/_title.scss
+++ b/src/_title.scss
@@ -1,6 +1,6 @@
 .title {
-  padding-top: 0.4em;
-  font-size: 0.2em;
+  padding-top: 0.4rem;
+  font-size: 1rem;
   @include flex-column() {
     align-self: flex-start;
     align-items: center;
