--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,4 @@
-@import "variables";
+@import "variablesAndMixins";
 @import "generalClasses";
 @import "score";
 @import "results";
@@ -12,8 +12,12 @@
 .calculator_container {
   position: relative;
   background-color: $color-background-primary;
-  // max-width: 600px;
   height: 90vh;
   margin: 0 auto;
   border-radius: 1.5rem;
+
+  @media screen and (min-width: 450px) {
+    width: 400px;
+    height: 98vh;
+  }
 }
