--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-.root {
-  margin: 0;
-  padding: 0;
+html {
+  font-size: 15px;
 }
 
 * {
@@ -8,14 +7,21 @@
   color: hsl(220, 100%, 25%);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   margin: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   position: relative;
   background-color: white;
-  font-size: 60px;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
+}
+@media screen and (min-width: 450px) {
+  body {
+    background-color: rgba(8, 35, 125, 0.174);
+    padding-top: 0.5rem;
+  }
 }
 
 .invisible {
@@ -164,9 +170,13 @@ body {
   line-height: 1.15;
   cursor: pointer;
   transition: all 0.2s ease-out;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 .options_button:active {
   box-shadow: rgba(37, 44, 97, 0.15) 0 0px 2px 0, rgba(93, 100, 148, 0.5) 0 1px 2px 0;
+  background-color: red;
 }
 .options_button-mode {
   text-align: center;
@@ -227,8 +237,8 @@ body {
 }
 
 .title {
-  padding-top: 0.4em;
-  font-size: 0.2em;
+  padding-top: 0.4rem;
+  font-size: 1rem;
   display: flex;
   flex-direction: column;
   align-self: flex-start;
@@ -251,7 +261,7 @@ body {
   justify-content: center;
   align-items: center;
   gap: 1rem;
-  font-size: 2em;
+  font-size: 7rem;
   font-weight: 300;
 }
 .screen_number {
@@ -303,7 +313,7 @@ body {
   text-transform: uppercase;
   font-weight: 600;
   letter-spacing: 2px;
-  font-size: 16px;
+  font-size: 1rem;
   text-align: center;
   text-wrap: nowrap;
   line-height: 1.15;
@@ -465,6 +475,12 @@ tr:nth-child(2n) {
   height: 90vh;
   margin: 0 auto;
   border-radius: 1.5rem;
+}
+@media screen and (min-width: 450px) {
+  .calculator_container {
+    width: 400px;
+    height: 98vh;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
